--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
+    "swiper": "^6.8.4",
     "twin.macro": "^3.4.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
