--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
     "swiper": "^6.8.4",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "twin.macro": "^3.4.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
